correcting overflow issue

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -75,7 +75,7 @@ section div{
     top:auto;
     height: auto;
     margin: auto;
-    /*overflow: hidden This break the whole map page */
+    overflow: hidden;
 }
 
 footer{
